@@ -1,6 +1,7 @@
 2006-09-01  Sven Neumann  <sven@gimp.org>
 
-	* app/display/gimpstatusbar.c: minor cleanup.
+	* app/display/gimpstatusbar.[ch]: use a hash table instead of object
+	data to maintain context ids. Saves lots of pointless string copies.
 
 2006-09-01  Michael Natterer  <mitch@gimp.org>
 
